--- a/skate_spots_app/templates/message.html
+++ b/skate_spots_app/templates/message.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="/wall">Message Board</a>
               </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/profile/{{user.id}}">Profile</a>
+                <a class="nav-link" href="/profile/{{user.id}}">Edit Profile</a>
               </li>
 
         <li class="nav-item active">
