--- a/skate_spots_app/templates/home.html
+++ b/skate_spots_app/templates/home.html
@@ -50,7 +50,7 @@
     <!--/ Nav Star /-->
     <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll" href="#page-top">Welcome back {{ user.first_name }}</a>
+        <a class="navbar-brand js-scroll" href="#page-top">Welcome Back {{ user.first_name }}</a>
         <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
           aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span></span>
@@ -66,7 +66,7 @@
               <a class="nav-link" href="/home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/profile/{{user.id}}">Profile</a>
+              <a class="nav-link" href="/profile/{{user.id}}">Edit Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
@@ -78,7 +78,7 @@
     <!--/ Nav End /-->
   
     <!--/ Intro Skew Star /-->
-    <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
+    <div id="home" class="intro route bg-image">
       <div class="overlay-itro"></div>
       <div class="intro-content display-table">
         <div class="table-cell">
