--- a/skate_spots_app/templates/spot.html
+++ b/skate_spots_app/templates/spot.html
@@ -53,7 +53,7 @@
               <a class="nav-link" href="/home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/profile/{{user.id}}">Profile</a>
+              <a class="nav-link" href="/profile/{{user.id}}">Edit Profile</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/logout">Logout</a>
@@ -65,7 +65,7 @@
     <!--/ Nav End /-->
   
     <!--/ Intro Skew Star /-->
-    <div id="home" class="intro route bg-image" style="background-image: url(img/intro-bg.jpg)">
+    <div id="home" class="intro route bg-image">
       <div class="overlay-itro"></div>
       <div class="intro-content display-table">
         <div class="table-cell">
@@ -80,7 +80,7 @@
               </ul>
               {% endif %}
             </section>
-            <form action="/create" method="post" enctype="multipart/form-data">
+            <form action="/create" method="post" enctype="multipart/form-data" class="mx-4 my-4">
               {% csrf_token %}
               <!-- {{ form.as_p }}  -->
               <div class="input-group form-group mt-2">
