--- a/skate_spots_app/static/css/style.css
+++ b/skate_spots_app/static/css/style.css
@@ -10,7 +10,7 @@
 ======================================*/
 
 body {
-  background-color: #0062d3;
+  background-color: #0078ff;
   color: #f5f5f5;
 }
 
@@ -87,6 +87,22 @@ a:hover {
   background-attachment: fixed;
   background-size: cover;
   background-position: center center;
+}
+
+.welcome {
+  color: #0078ff;
+  text-shadow: 2px 2px black;
+}
+
+.logo-title {
+  background-color: #0078ff;
+  opacity: 0.8;
+  filter: alpha(opacity=80); /* For IE8 and earlier */
+ }
+
+.card-deck {
+  
+  text-align: center;
 }
 
 .overlay-mf {
