--- a/skate_spots_app/templates/index.html
+++ b/skate_spots_app/templates/index.html
@@ -14,7 +14,7 @@
     <link rel="shortcut icon" href="static/img/favicon.ico" type="image/x-icon">
   <style>
     body {
-  background: url("static/img/skate.gif") no-repeat center center fixed;
+  background: url("static/img/Stuntman_grab.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -23,14 +23,14 @@
 
 
   </style>
-
+<link rel="stylesheet" href="../static/css/style.css">
 </head>
 
 <body class="bg-dark text-white">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
   <div class="container">
-    <h1 class="logo_title text-center mt-5">Let's Skate!</h1>
-    <h3 class="logo_title text-center mb-5">Sign in to view Skate Spots</h3>
+    <h1 class="welcome text-center mt-5">Let's Skate!</h1>
+    <h3 class="welcome text-center mb-5">Sign in to view Skate Spots</h3>
     <section class="text-danger text-center">
         {% if messages %}
         <ul class="list-unstyled d-inline-block">
@@ -40,11 +40,11 @@
         </ul>
         {% endif %}
       </section>
-    <div class="card-deck ">
+    <div class="card-deck flex-right">
       
-      <div style="background-color: transparent"  class="card text-white">
+      <div class="logo-title card  text-white">
         <div class="card-body text-center">
-          <span class="logo_title mt-5 text-white h3">Register</span>
+          <span class=" mt-5 text-white h3">Register</span>
           <form action="/register" method="post">
             {% csrf_token %}
             <div class="input-group form-group mt-2">
@@ -77,9 +77,9 @@
         </div>
       </div>
 
-      <div style="background-color: transparent"  class="card text-white">
+     <div class="logo-title card text-white">
         <div class="card-body text-center">
-          <span class="logo_title mt-5 text-white h3">Login</span>
+          <span class=" mt-5 text-white h3">Login</span>
           <form action="/login" method="post">
             {% csrf_token %}
             <div class="input-group form-group mt-2">
@@ -102,9 +102,10 @@
 
           </form>
         </div>
-      </div>
-    </div>
+      </>
+ 
   </div>
+</div>
 </body>
 
 </html>
